# DepVet

./: .dockerignore  .gitignore  Dockerfile  README.md  depvet.toml.example  docker-run.sh  pyproject.toml
.github/workflows/: ci.yml
depvet/: __init__.py  cli.py  exceptions.py  health.py  http.py  logging.py  metrics.py
depvet/alert/: __init__.py  dlq.py  router.py  slack.py  stdout.py  webhook.py
depvet/analyzer/: __init__.py  ast_scan.py  base.py  claude.py  decode_scan.py  deep.py  dep_extractor.py  dep_reputation.py  extended_rules.py  import_diff.py  openai.py  prompt_util.py  rules.py  sabotage_rules.py  (+3 more)
securify_plugin/: __init__.py  finding_creator.py  plugin.py  risk_propagator.py  skg_writer.py  watchlist_sync.py
tests/: test_alert.py  test_alert_backends.py  test_alert_full.py  test_ast_scan.py  test_chunker.py  test_cli_smoke.py  test_config.py  test_decode_scan.py  test_deep_full.py  test_dep_extractor.py  test_dep_extractor_go_cargo.py  test_dep_reputation.py  test_diff_generator.py  test_diff_generator_full.py  test_dlq.py  test_downloader.py  test_exceptions.py  test_explicit_watchlist.py  test_extended_rules.py  test_fb_issues.py  test_graceful_shutdown.py  test_http_retry.py  test_import_diff.py  test_integration.py  test_issues_11_15.py  test_issues_19_22.py  test_issues_22_24_26.py  test_known_bad.py  test_lockfile.py  test_logging_format.py  test_metrics_health.py  test_models.py  test_monitor_behavior.py  test_osv.py  test_preflight.py  test_priority.py  test_prompt_util.py  test_real_incidents.py  test_registry.py  test_registry_monitors.py  (+17 more)
(+35 files in other folders)
