[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "depvet"
version = "0.1.0"
description = "Dependency Vetter – detect malicious code in PyPI/npm package updates using LLM analysis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "aiohttp>=3.9",
    "anthropic>=0.39",
    "openai>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "PyYAML>=6.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
]

[project.scripts]
depvet = "depvet.cli:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["depvet"]
